<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="mine_chinese">简体中文</string>
    <string name="mine_english">English</string>

    <string name="mine_login_now">立即登录</string>
    <string name="mine_welcome">欢迎来到交易所</string>
    <string name="mine_welcome_explain">登录账号即享更多服务</string>
    <string name="mine_set_up">设置</string>
    <string name="mine_trouble_feedback">问题反馈</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_login">登录</string>
    <string name="mine_find_pwd">找回密码</string>
    <string name="mine_register">注册</string>
    <string name="mine_register_tips1">阅读并同意</string>
    <string name="mine_register_tips2">及</string>
    <string name="mine_register_tips_use_protocol">服务协议</string>
    <string name="mine_register_tips_privacy_clause">隐私条款</string>
    <string name="mine_please_input_true_mobile">请输入正确的手机号</string>
    <string name="mine_please_input_true_email">请输入正确的邮箱</string>
    <string name="mine_please_input_true_code">请输入正确的验证码</string>
    <string name="mine_please_input_true_pwd">密码强度太低,请设置长度不小于6位的密码</string>
    <string name="mine_please_input_true_password">请输入至少6位密码</string>
    <string name="mine_twice_input_difference">两次密码输入不一致</string>
    <string name="mine_please_input_true_mobile_or_email">请输入正确的手机号或邮箱</string>
    <string name="mine_please_agree_protocol">请阅读并同意服务协议及隐私条款</string>
    <string name="mine_login_pass_word">登录密码</string>
    <string name="mine_input_login_pass_word">请输入登录密码</string>
    <string name="mine_input_login_pass_word_error">输入登录密码错误</string>
    <string name="mine_input_sure_pass_word">请确认登录密码</string>
    <string name="mine_input_new_pass_word">请输入新密码</string>
    <string name="mine_input_new_pass_word_agian">请再次输入新密码</string>
    <string name="mine_input_sure_new_word">请确认新密码</string>
    <string name="mine_login_forgot_pass_word_">忘记密码？</string>
    <string name="mine_login_email_or_phone_account">请输入邮箱或手机号</string>
    <string name="mine_login_phone_account">请输入手机号</string>
    <string name="mine_login_email_account">请输入邮箱</string>
    <string name="mine_login_phone_sms">手机号</string>
    <string name="mine_please_input_account">请输入账号</string>
    <string name="mine_account_un_register">该账号暂未注册</string>
    <string name="mine_email_register">邮箱注册</string>
    <string name="mine_mobile_register">手机注册</string>
    <string name="mine_login_verification_code_sms">验证码</string>
    <string name="mine_login_get_verification_code_sms">获取验证码</string>
    <string name="mine_input_code">请输入验证码</string>
    <string name="mine_input_pwd">输入密码</string>
    <string name="mine_input_pwd_again">请再次输入密码</string>
    <string name="mine_invite_code">邀请码（选填）</string>
    <string name="mine_please_invite_code">请输入邀请码</string>
    <string name="mine_save">保存</string>
    <string name="mine_language">语言</string>
    <string name="mine_price_unit">计价方式</string>
    <string name="mine_use_agreement">使用协议</string>
    <string name="mine_privacy_policy">隐私条款</string>
    <string name="mine_version_log">版本日志</string>
    <string name="mine_official_website">官方网站</string>
    <string name="mine_email">邮箱</string>
    <string name="mine_modify_login_pwd">修改登录密码</string>
    <string name="mine_set_assets_pwd">设置资金密码</string>
    <string name="mine_modify_assets_pwd">修改资金密码</string>
    <string name="mine_unbind">未绑定</string>
    <string name="mine_already_bind">已绑定</string>
    <string name="mine_unset">未设置</string>
    <string name="mine_un_auth">未认证</string>
    <string name="mine_already_auth">已认证</string>
    <string name="mine_modify">修改</string>
    <string name="mine_upload_fail">上传失败，请稍后再试~</string>

    <string name="mine_safe_center">安全中心</string>
    <string name="mine_real_auth">实名认证</string>
    <string name="mine_market_refresh_times">行情刷新频率</string>
    <string name="mine_clear_cache">清除缓存</string>
    <string name="mine_clear_cache_success">清除缓存成功</string>
    <string name="mine_exit_login">退出登录</string>
    <string name="mine_exit_login_explain">是否退出登录?</string>
    <string name="mine_upload_agian">重新上传</string>
    <string name="mine_user_name">用户名</string>
    <string name="mine_please_input_user_name">请输入用户名</string>
    <string name="mine_bind_mobile">绑定手机号</string>
    <string name="mine_bind_email">绑定邮箱</string>
    <string name="mine_release_bind_mobile">解绑手机号</string>
    <string name="mine_release_bind_email">解绑邮箱</string>
    <string name="mine_bind_google_check">绑定谷歌验证</string>
    <string name="mine_unbind_google_check">解绑谷歌验证</string>
    <string name="mine_google_personal_check">谷歌身份验证</string>
    <string name="mine_bind_google_personal_check">绑定谷歌身份验证</string>
    <string name="mine_bind_google_personal_check_explain">请妥善备份密钥以防遗失</string>
    <string name="mine_copy_key">复制密钥</string>
    <string name="mine_download_qr_code">下载二维码</string>
    <string name="mine_gestures_password">手势密码</string>
    <string name="mine_assets_password">资金密码</string>
    <string name="mine_please_input_assets_password">请输入资金密码</string>
    <string name="mine_assets_password_times">资金密码时效</string>
    <string name="mine_finger_password">指纹密码</string>
    <string name="mine_gestures">手势</string>
    <string name="mine_show_gestures_track">显示手势轨迹</string>
    <string name="mine_modify_gestures_password">修改手势密码</string>
    <string name="mine_setting_gestures_password">设置手势密码</string>
    <string name="mine_gestures_explain">为了您的资金安全，请设置手势密码</string>
    <string name="mine_gestures_error_times">密码错误，还可以再输入%1$s次</string>
    <string name="mine_gestures_error_to_login">手势密码错误，请重新登录</string>
    <string name="mine_gesture_min_point">至少连接%1$s个点，请重新输入</string>
    <string name="mine_gesture_draw_again">再次绘制解锁图案</string>
    <string name="mine_gesture_different">与上次绘制不一致，请重新绘制</string>
    <string name="mine_forget_gesture_pwd">忘记手势密码</string>
    <string name="mine_pwd_login">密码登录</string>
    <string name="mine_reset_draw">重绘</string>
    <string name="mine_google_code">谷歌验证码</string>
    <string name="mine_please_input_google_code">请输入谷歌验证码</string>
    <string name="mine_already_open">已开启</string>
    <string name="mine_un_open">未开启</string>
    <string name="mine_modify_bind_mobile_explain">修改手机号后24h内将无法提币，请慎重操作！</string>
    <string name="mine_modify_bind_email_explain">修改邮箱后24h内将无法提币，请慎重操作！</string>

    <string name="mine_upload_id_card_pic">上传身份证照片</string>
    <string name="mine_id_card_number">身份证号</string>
    <string name="mine_real_name">真实姓名</string>
    <string name="mine_please_input_real_name">请输入真实姓名</string>
    <string name="mine_please_input_real_id_card">请输入您的真实身份证号</string>
    <string name="mine_please_upload_card_front">请上传身份证正面照</string>
    <string name="mine_please_upload_card_back">请上传身份证反面照</string>
    <string name="mine_please_upload_hand_card_front">请上传手持身份证正面照</string>
    <string name="mine_auth_fail">认证失败</string>
    <string name="mine_please_check_id_card_info">请您核对证件信息，重新上传！</string>
    <string name="mine_info_checking">资料审核中</string>
    <string name="mine_info_check_success">资料认证成功</string>
    <string name="mine_info_submit_success">资料已提交成功，请您耐心等待！</string>
    <string name="mine_info_auth_success">您已通过认证</string>

    <string name="mine_i_know">我知道了</string>
    <string name="mine_advice_hint">请写下您的问题，我们将尽快为您解决！</string>
    <string name="mine_invite_friend">邀请好友</string>

    <string name="mine_info_find_pwd_prompt">找回密码后24h内将无法提币，请慎重操作！</string>

    <string name="mine_unit_rmb">人民币</string>
    <string name="mine_unit_rmb_">人民币(CNY）</string>
    <string name="mine_unit_usd">美元</string>
    <string name="mine_unit_usd_">美元(USD)</string>


    <string name="mine_market_refresh_1">始终普通行情</string>
    <string name="mine_market_refresh_2">始终实时行情</string>
    <string name="mine_market_refresh_3">仅在WI-FI下实时行情</string>

    <string name="mine_loading_checking">正在检测...</string>
    <string name="mine_loading_login">正在登录...</string>
    <string name="mine_loading_reset">正在重置...</string>
    <string name="mine_loading_bind">正在绑定...</string>
    <string name="mine_loading_unbind">正在解绑...</string>
    <string name="mine_loading_register">正在注册...</string>
    <string name="mine_loading_submit">正在提交...</string>
    <string name="mine_loading_set">正在设置...</string>
    <string name="mine_register_success">注册成功</string>
    <string name="mine_bind_success">绑定成功</string>
    <string name="mine_unbind_success">解绑成功</string>
    <string name="mine_reset_success">重置成功</string>
    <string name="mine_set_success">设置成功</string>
    <string name="mine_modify_success">修改成功</string>
    <string name="mine_submit_success">提交成功</string>

    <string name="mine_please_write_advice">请写下您的宝贵意见~</string>

    <string name="mine_pay_pwd_type_every_times">每次验证</string>
    <string name="mine_pay_pwd_type_two_hour_once">两小时验证一次</string>
    <string name="mine_pay_pwd_type_never">永不</string>

    <string name="please_search_country">请搜索国家和地区</string>
    <string name="mine_set_user_name">设置用户名</string>
    <string name="mine_set_user_name_explain">用户名一旦设置将无法更改，请注意！</string>
    <string name="save_success_to">已成功保存到</string>

    <string name="mine_etf_exchange">ETF交易所</string>
    <string name="mine_version_no">版本号</string>
    <string name="mine_update_content">更新内容</string>
    <string name="mine_update_time">更新时间</string>
    <string name="mine_version_new">当前已是最新版本~</string>

    <string name="mine_invite_code_">邀请码</string>
    <string name="mine_invite_friends_now">马上邀请好友加入</string>
    <string name="mine_invite_your_own_pic">你的专属海报</string>
    <string name="mine_please_select_one">请先选择一张模板~</string>
    <string name="mine_open_gesture_pwd_explain">手势密码与指纹密码只能开启一项，请先关闭指纹密码</string>
    <string name="mine_open_finger_pwd_explain">手势密码与指纹密码只能开启一项，请先关闭手势密码</string>
    <string name="mine_nonsupport_finger_lock">该设备不支持指纹解锁~</string>
    <string name="mine_please_open_system_finger_lock">请先开启系统指纹解锁功能~</string>
    <string name="mine_finger_error_times">指纹匹配失败，还可以再尝试%1$s次</string>
    <string name="mine_finger_error_to_login">指纹匹配失败，请重新登录</string>

</resources>
