<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle">

        <TextView
            style="@style/ToolbarCenterTitle"
            android:text="@string/mine_real_auth" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_common_bgEE" />

    <ImageView
        android:id="@+id/iv_auth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mine_bg_auth_checking"
        android:layout_marginTop="90dp" />

    <TextView
        android:id="@+id/tv_auth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mine_info_checking"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tv_auth_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/mine_info_submit_success"
        android:textColor="@color/color_common_text99"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/mine_button_style"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="57dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="40dp"
        android:text="@string/mine_upload_agian" />

</LinearLayout>