<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/mine_bg_auth_checking"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@color/color_common_text44"
        android:text="@string/mine_submit_success"
        android:textSize="19sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/mine_info_submit_success"
        android:textColor="@color/color_common_text99"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_ok"
        style="@style/mine_button_style_2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="49dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:text="@string/mine_i_know" />

</LinearLayout>