<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_common_bgEE"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle">

        <TextView
            style="@style/ToolbarCenterTitle"
            android:text="@string/mine_set_user_name" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mine_clfefcec"
        android:padding="10dp"
        android:text="@string/mine_set_user_name_explain"
        android:textColor="@color/mine_clfa8006" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/mine_user_name"
                android:textColor="@color/color_common_text33"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/mine_please_input_user_name"
                android:padding="15dp"
                android:textColor="@color/color_common_text33"
                android:textColorHint="@color/color_common_text99"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/mine_button_style"
        android:layout_marginTop="257dp"
        android:text="@string/sure" />

</LinearLayout>